Tela de Gerenciamento Dos Usuarios e Insert Tabela Conexao

--- a/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/contato.html
+++ b/ProjetoIndividual-GeoTech/web-data-viz/public/ProjetoIndividual-GeoTech/Site/SitePrincipal/contato.html
@@ -77,7 +77,7 @@
                             required></textarea>
 
                         <div class="enviar">
-                            <input type="submit" value="Enviar" onclick="feedback()">
+                            <input type="submit" value="Enviar" onclick="feedback(), conexao()">
                         </div>
                     </div>
                 </div>
@@ -162,4 +162,32 @@
             return false; // Adicione isso para cancelar a submissão do formulário
         }
     }
+
+    function conexao() {
+        var idV = idUser;
+
+         // Enviando o valor da nova input
+            fetch("/usuarios/conexao", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify({
+                    // crie um atributo que recebe o valor recuperado aqui
+                    // Agora vá para o arquivo routes/usuario.js
+                    idServer: idV,
+
+
+                }),
+            }).then(function (resposta) {
+                console.log("resposta: ", resposta);
+
+            })
+                .catch(function (resposta) {
+                    console.log(`#ERRO: ${resposta}`);
+                });
+
+            return false; // Adicione isso para cancelar a submissão do formulário
+        }
+    
 </script>
